Fixed alignment settings with 100% width

--- a/style.css
+++ b/style.css
@@ -16,14 +16,16 @@ body {
 }
 
 .sectiontwo .row {
-  display: inline-flex;
-  justify-content: space-around
+  display: flex;
+  justify-content: center;
+  width: 100%
 }
 
 .row {
   margin: 5px;
   padding: 5px;
-  gap: 5px;
+  gap: 25px;
+  justify-content: center;
   align-self: center;
 }
 
@@ -50,7 +52,7 @@ body {
 
 a {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   color: #E5E7EB;
   text-decoration: none;
@@ -61,13 +63,14 @@ a {
   justify-content: center;
   size: 24px;
   padding: 16px;
-  height: auto;
-  width: 625px;
+  gap: 50px;
+  width: 100%;
 }
 
 .contentleft {
   display: flex;
   justify-content: center;
+  align-content: center;
   flex-direction: column;
   height: auto;
   width: 275px;
